--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Privacy Policy — {{APP_NAME}}</title>
+  <title>Privacy Policy — Data Interview AI</title>
   <style>
     :root {
       --fg: #111;
@@ -26,16 +26,16 @@
   </style>
   <!--
     How to customize:
-    - Replace {{APP_NAME}}, {{COMPANY_NAME}}, {{CONTACT_EMAIL}}, {{EFFECTIVE_DATE}}, {{RETENTION_DAYS}}
+    - Replace Data Interview AI, {{DEVELOPER_NAME}}, {{CONTACT_EMAIL}}, 2025-09-01
     - Optionally adjust third‑party wording and hosting details
   -->
 </head>
 <body>
   <main class="container">
-    <h1>Privacy Policy for {{APP_NAME}}</h1>
-    <div class="meta">Effective: {{EFFECTIVE_DATE}}</div>
+    <h1>Privacy Policy for Data Interview AI</h1>
+    <div class="meta">Effective: 09/01/2025</div>
 
-    <p>{{APP_NAME}} helps you practice data interviews by generating mock questions and feedback. This policy explains what we collect, how we use it, and your choices.</p>
+    <p>Data Interview AI helps you practice data interviews by generating mock questions and feedback. This policy explains what we collect, how we use it, and your choices.</p>
 
     <h2>Data We Collect</h2>
     <ul>
@@ -62,8 +62,8 @@
     <ul>
       <li>Profile data is stored on your device. If your OS account syncs device data, your OS vendor may process it according to their policy.</li>
       <li>Interview content is transmitted to our backend and forwarded to Gemini for generation.</li>
-      <li>We retain minimal server logs (e.g., prompt metadata, error details, IP) for up to {{RETENTION_DAYS}} days for security and troubleshooting, unless a longer period is required by law.</li>
-      <li>AI‑generated questions saved by you are stored on your device; if we store any copy server‑side, we follow the same retention window.</li>
+      <li>We do not retain server logs beyond transient processing needed to deliver the service and ensure reliability.</li>
+      <li>AI‑generated questions saved by you are stored on your device; we do not retain server‑side copies.</li>
     </ul>
 
     <h2>Security</h2>
@@ -73,14 +73,14 @@
 
     <h2>Your Choices & Rights</h2>
     <ul>
-      <li>To request deletion of your data, contact us at <a href="mailto:{{CONTACT_EMAIL}}">{{CONTACT_EMAIL}}</a>.</li>
+      <li>To request deletion of your data, contact us at <a href="mailto:hongleil1994@gmail.com">hongleil1994@gmail.com</a>.</li>
       <li>If you prefer not to use AI processing, please don’t submit content in the app.</li>
       <li>We do not sell your personal information.</li>
     </ul>
 
     <h2>Children’s Privacy</h2>
     <p>
-      {{APP_NAME}} is not intended for children under 13 (or the age of consent in your region). We do not knowingly collect data from children.
+      Data Interview AI is not intended for children under 13 (or the age of consent in your region). We do not knowingly collect data from children.
     </p>
 
     <h2>International Transfers</h2>
@@ -95,11 +95,10 @@
 
     <h2>Contact</h2>
     <p>
-      {{COMPANY_NAME}} — <a href="mailto:{{CONTACT_EMAIL}}">{{CONTACT_EMAIL}}</a>
+      Honglei Li — <a href="mailto:hongleil1994@gmail.com">hongleil1994@gmail.com</a>
     </p>
 
-    <p class="footer">© {{APP_NAME}} — All rights reserved.</p>
+    <p class="footer">© Data Interview AI — All rights reserved.</p>
   </main>
 </body>
 </html>
-
