--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Terms of Use — {{APP_NAME}}</title>
+  <title>Terms of Use — Data Interview AI</title>
   <style>
     :root { --fg:#111; --muted:#555; --bg:#fff; --accent:#0b5fff; --maxw:860px; }
     html, body { margin:0; padding:0; background:var(--bg); color:var(--fg); font:16px/1.6 -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif; }
@@ -20,9 +20,9 @@
 <body>
   <main class="container">
     <h1>Terms of Use</h1>
-    <div class="meta">For {{APP_NAME}} — Effective: {{EFFECTIVE_DATE}}</div>
+    <div class="meta">For Data Interview AI — Effective: 09/01/2025</div>
 
-    <p>These Terms of Use ("Terms") govern your use of {{APP_NAME}} (the "App") provided by {{COMPANY_NAME}} ("we", "us"). By using the App, you agree to these Terms.</p>
+    <p>These Terms of Use ("Terms") govern your use of Data Interview AI (the "App") provided by Honglei Li ("we", "us", the "Developer"). By using the App, you agree to these Terms.</p>
 
     <h2>1. Eligibility & Acceptance</h2>
     <p>You must be at least 13 years old (or the age of digital consent in your region). If you use the App on behalf of an organization, you represent you have authority to bind that organization.</p>
@@ -62,7 +62,7 @@
     <p>TO THE MAXIMUM EXTENT PERMITTED BY LAW, WE WILL NOT BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES, OR ANY LOSS OF DATA, PROFITS, OR REVENUE, ARISING FROM YOUR USE OF THE APP. OUR AGGREGATE LIABILITY WILL NOT EXCEED THE GREATER OF (A) AMOUNTS YOU PAID US IN THE 12 MONTHS PRECEDING THE CLAIM OR (B) USD $50.</p>
 
     <h2>11. Indemnification</h2>
-    <p>You agree to indemnify and hold harmless {{COMPANY_NAME}} from claims arising out of your misuse of the App or violation of these Terms.</p>
+    <p>You agree to indemnify and hold harmless Honglei Li from claims arising out of your misuse of the App or violation of these Terms.</p>
 
     <h2>12. Termination</h2>
     <p>We may suspend or terminate your access at any time for any reason, including suspected abuse or security risk. You may stop using the App at any time.</p>
@@ -71,14 +71,13 @@
     <p>We may update these Terms from time to time. Continued use after changes means you accept the updated Terms. The effective date will reflect the latest update.</p>
 
     <h2>14. Governing Law</h2>
-    <p>These Terms are governed by the laws of the jurisdiction where {{COMPANY_NAME}} is established, without regard to conflict‑of‑law rules.</p>
+    <p>These Terms are governed by the laws of the jurisdiction where Honglei Li is established, without regard to conflict‑of‑law rules.</p>
 
     <h2>15. Contact</h2>
-    <p>Questions? Contact us at <a href="mailto:{{CONTACT_EMAIL}}">{{CONTACT_EMAIL}}</a>.</p>
+    <p>Questions? Contact us at <a href="mailto:hongleil1994@gmail.com">hongleil1994@gmail.com</a>.</p>
 
-    <p class="footer">© {{APP_NAME}} — All rights reserved.</p>
+    <p class="footer">© Data Interview AI — All rights reserved.</p>
   </main>
   
 </body>
 </html>
-
